--- a/public/assets/css/cart/cart.css
+++ b/public/assets/css/cart/cart.css
@@ -24,6 +24,7 @@ h1 {
     border-radius: 15px;
     width: 60%;
     display: flex;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
 }
