--- a/public/assets/css/cart/ordered.css
+++ b/public/assets/css/cart/ordered.css
@@ -19,7 +19,7 @@ h1 {
     height: 20vh;
     width: 30%;
     border-radius: 5px;
-    border: solid var(--main-color);
+    border: solid var(--tertiary-color);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -52,7 +52,7 @@ li {
 }
 
 .ul-bg {
-    border: solid var(--main-color);
+    border: solid var(--tertiary-color);
     padding-bottom: 10px;
     border-radius: 5px;
     width: 95%;
