--- a/src/View/Product/show.html.twig
+++ b/src/View/Product/show.html.twig
@@ -8,28 +8,7 @@
 <div class="parent-div">
 
     <div class="div1">
-        <div class="product-image">
-            <p>Bonjour je suis une image</p>
-            architecto assumenda iusto, ullam eius dicta nostrum dolor. Tenetur similique iusto hic Lorem ipsum dolor,
-            sit amet consectetur adipisicing elit. Quam aliquid inventore accusantium, veritatis labore culpa cupiditate
-            nam perferendis eius omnis dolorum ullam in animi vero rerum laborum mollitia quae ratione. Lorem ipsum
-            dolor sit, amet consectetur adipisicing elit. Sunt provident est illum et numquam corrupti optio velit modi?
-            Natus reiciendis ad mollitia eos minima reprehenderit eum repudiandae modi rerum fugiat. Lorem ipsum dolor
-            sit amet, consectetur adipisicing elit. Aut rerum cum soluta saepe laudantium ex recusandae molestiae,
-            natus, architecto assumenda iusto, ullam eius dicta nostrum dolor. Tenetur similique iusto hic Lorem ipsum
-            dolor, sit amet consectetur adipisicing elit. Quam aliquid inventore accusantium, veritatis labore culpa
-            cupiditate nam perferendis eius omnis dolorum ullam in animi vero rerum laborum mollitia quae ratione. Lorem
-            ipsum dolor sit, amet consectetur adipisicing elit. Sunt provident est illum et numquam corrupti optio velit
-            modi? Natus reiciendis ad mollitia eos minima reprehenderit eum repudiandae modi rerum fugiat. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Aut rerum cum soluta saepe laudantium ex recusandae molestiae,
-            natus, architecto assumenda iusto, ullam eius dicta nostrum dolor. Tenetur similique iusto hic Lorem ipsum
-            dolor, sit amet consectetur adipisicing elit. Quam aliquid inventore accusantium, veritatis labore culpa
-            cupiditate nam perferendis eius omnis dolorum ullam in animi vero rerum laborum mollitia quae ratione. Lorem
-            ipsum dolor sit, amet consectetur adipisicing elit. Sunt provident est illum et numquam corrupti optio velit
-            modi? Natus reiciendis ad mollitia eos minima reprehenderit eum repudiandae modi rerum fugiat. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Aut rerum cum soluta saepe laudantium ex recusandae molestiae,
-            natus, architecto assumenda iusto, ullam eius dicta nostrum dolor. Tenetur similique iusto hic.
-        </div>
+        <div class="product-image"><img src="/assets/images/{{ product.image }}" alt="image-produit" class="prod-img"></div>
         <div class="div3" id="div3">
             <p class="long-description">{{ product.descriptionDetail }}</p>
         </div>
