--- a/src/View/Admin/Categorie/index.html.twig
+++ b/src/View/Admin/Categorie/index.html.twig
@@ -74,7 +74,7 @@
                     <table class="table table-bordered text-light rounded">
                         <thead>
                           <tr class="">
-                            <th scope="col">ID</th>
+                            {# <th scope="col">ID</th> #}
                             <th scope="col">Nom</th>
                             <th scope="col">Description</th>
                             <th scope="col">Parent</th>
@@ -86,7 +86,7 @@
 
                             {% for item in items %}
                             <tr>
-                                <th scope="row">{{ item.id }}</th>
+                                {# <th scope="row">{{ item.id }}</th> #}
                                 <td>{{ item.name }}</td>
                                 <td>{{ item.description[:10] }}...</td>
                                 <td>{{ item.parent_id }}</td>
