--- a/src/View/Admin/Product/edit.html.twig
+++ b/src/View/Admin/Product/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout_admin.html.twig' %}
 
 {% block content %}
-    <h1>Edit categorie</h1>
+    <h1>Editer un produit</h1>
     {% include 'Admin/Product/_form.html.twig' %}
 {% endblock %}
