--- a/src/View/Product/show.html.twig
+++ b/src/View/Product/show.html.twig
@@ -8,7 +8,7 @@
 <div class="parent-div">
 
     <div class="div1">
-        <div class="product-image"><img src="/assets/images/{{ product.image }}" alt="image-produit" class="prod-img"></div>
+        <div class="product-image"><img src="/assets/images/uploads/{{ product.image }}" alt="image-produit" class="prod-img"></div>
         <div class="div3" id="div3">
             <p class="long-description">{{ product.descriptionDetail }}</p>
         </div>
