--- a/src/View/layout_admin.html.twig
+++ b/src/View/layout_admin.html.twig
@@ -35,9 +35,9 @@
             </div>
             <div class="app-header-navigation">
                 <div class="tabs">
-                    {# <a href="#">
+                    <a href="#">
                         Overview
-                    </a> #}
+                    </a>
                 </div>
             </div>
             <div class="app-header-actions">
@@ -94,7 +94,7 @@
                         <i class="bi bi-terminal-split"></i>
                         <span>Commandes</span>
                     </a>
-                    <a href="#">
+                    <a href="/admin/log">
                         <i class="bi bi-body-text"></i>
                         <span>LOG</span>
                     </a>
