modification des noms des formulaires

--- a/src/View/Admin/Categorie/_form.html.twig
+++ b/src/View/Admin/Categorie/_form.html.twig
@@ -5,7 +5,7 @@
 		<div class="col-md-10">
 			<div class="card w-100">
 				<div class="card-header">
-					<h2 class="card-title text-center">Category Form</h2>
+					<h2 class="card-title text-center">Formulaire de catégorie</h2>
 							{% if success is defined %}
 						
 								<div class="alert alert-success alert-dismissible fade show" role="alert">
