--- a/src/View/Admin/Categorie/edit.html.twig
+++ b/src/View/Admin/Categorie/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout_admin.html.twig' %}
 
 {% block content %}
-    <h1>Edit categorie</h1>
+    <h1>Editer une categorie</h1>
     {% include 'Admin/Categorie/_form.html.twig' %}
 {% endblock %}
