--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -16,7 +16,7 @@
                         <ul class="navbar-nav ms-auto py-4 py-md-0 navbar-dark">
 
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4 active">
-                                <a class="nav-link" href="http://localhost:8000/">Home</a>
+                                <a class="nav-link" href="http://localhost:8000/">Accueil</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
                                 <a class="nav-link" href="/about">Qui sommes-nous</a>
