--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,30 +1,29 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext");
 
-@import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Yellowtail&display=swap");
 
 :root {
     --text-color-light: rgb(253, 253, 253);
     --text-color-black: rgb(22, 22, 22);
 
-    --main-color: #3A1F24;
-    --secondary-color: #A46C35;
-    --tertiary-color: #CEA56A;
-    --quaternary-color: #1C2A33;
-    --quinary-color: #FFFDE5; 
-    --sixnary-color: #EEE6D8;
+    --main-color: #3a1f24;
+    --secondary-color: #a46c35;
+    --tertiary-color: #cea56a;
+    --quaternary-color: #1c2a33;
+    --quinary-color: #fffde5;
+    --sixnary-color: #eee6d8;
 }
-
 
 /* #Primary
 ================================================== */
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
     color: #212112;
-    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
+    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg");
     background-position: center;
     background-repeat: repeat;
     background-size: 7%;
@@ -144,7 +143,7 @@ body {
     background-color: #000;
     top: 0;
     left: 0;
-    content: '';
+    content: "";
     z-index: 2;
     transition: all 300ms linear;
 }
@@ -166,7 +165,6 @@ body {
 }
 
 .nav-link {
-    
     font-weight: 500;
     transition: all 200ms linear;
 }
@@ -191,7 +189,7 @@ body {
     left: 0;
     width: 100%;
     height: 2px;
-    content: '';
+    content: "";
     background-color: #5f7db4;
     opacity: 0;
     transition: all 200ms linear;
@@ -454,7 +452,8 @@ body.hero-anime #switch {
 
 .switched #circle {
     left: 43px;
-    box-shadow: 0 4px 4px rgba(26, 53, 71, 0.25), 0 0 0 1px rgba(26, 53, 71, 0.07);
+    box-shadow: 0 4px 4px rgba(26, 53, 71, 0.25),
+        0 0 0 1px rgba(26, 53, 71, 0.07);
     background: #fff;
 }
 
@@ -503,7 +502,7 @@ body.hero-anime #switch {
 .dropdown-item:hover,
 .dropdown-item:focus {
     color: #fff;
-    background-color: rgba(129, 103, 169, .6);
+    background-color: rgba(129, 103, 169, 0.6);
 }
 
 body.dark {
@@ -622,7 +621,7 @@ body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
         transition: all 200ms linear;
     }
 
-    .dropdown-toggle[aria-expanded="true"]+.dropdown-menu {
+    .dropdown-toggle[aria-expanded="true"] + .dropdown-menu {
         margin-top: 10px !important;
         margin-bottom: 20px !important;
     }
@@ -639,4 +638,48 @@ body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
         background-color: transparent;
         box-shadow: none;
     }
+}
+
+.footer {
+    background-color: #3a1f24;
+    color: #ffffff;
+    padding: 20px 0;
+    position: relative;
+}
+
+.footer-logo {
+    max-width: 150px;
+}
+
+.footer .list-unstyled {
+    padding: 0;
+    list-style: none;
+    margin: 0;
+}
+
+.footer .list-unstyled li {
+    margin: 10px 0;
+}
+
+.footer .list-unstyled a {
+    color: #ffffff;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.footer .list-unstyled a:hover {
+    color: #a46c35;
+}
+
+#map {
+    height: 200px;
+    background-color: #fff;
+}
+
+.footer i {
+    font-size: 24px;
+}
+
+.footer .text-center {
+    margin-top: 20px;
 }
