--- a/src/View/footer.html.twig
+++ b/src/View/footer.html.twig
@@ -1,3 +1,57 @@
-{% block footer %}
-<h1>Test footer</h1>
-{% endblock %}
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 d-flex align-items-center">
+                <img
+                    src="/assets/images/logo.png"
+                    alt="Logo"
+                    class="footer-logo"
+                />
+            </div>
+
+            <div class="col-md-4 text-center">
+                <ul class="list-unstyled">
+                    <li><a href="/" class="text-white">Home</a></li>
+                    <li>
+                        <a href="/about" class="text-white">Qui sommes-nous</a>
+                    </li>
+                    <li><a href="/items" class="text-white">Items</a></li>
+                    <li><a href="/cart" class="text-white">Panier</a></li>
+                    <li><a href="/login" class="text-white">Login</a></li>
+                    <li>
+                        <a href="/logout" class="text-white">Se Déconnecter</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-4">
+                <div id="map"></div>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col text-center">
+                <a
+                    href="https://facebook.com"
+                    class="text-white me-3"
+                    target="_blank"
+                >
+                    <i class="bi bi-facebook"></i>
+                </a>
+                <a
+                    href="https://twitter.com"
+                    class="text-white me-3"
+                    target="_blank"
+                >
+                    <i class="bi bi-twitter"></i>
+                </a>
+                <a
+                    href="https://instagram.com"
+                    class="text-white"
+                    target="_blank"
+                >
+                    <i class="bi bi-instagram"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
