--- a/src/View/footer.html.twig
+++ b/src/View/footer.html.twig
@@ -25,7 +25,17 @@
             </div>
 
             <div class="col-md-4">
-                <div id="map"></div>
+                <!-- Intégration de la carte via iframe -->
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.6330533719783!2d3.0197751761546416!3d50.63393317413631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d55c63d0d77d%3A0x6986c08acba25607!2sWild%20Code%20School%20-%20Formation%20d%C3%A9veloppeur%20web%2C%20data%20analyst%2C%20informatique%2C%20web%20design!5e0!3m2!1sfr!2sca!4v1722484485404!5m2!1sfr!2sca"
+                    width="100%"
+                    height="300"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                >
+                </iframe>
             </div>
         </div>
         <div class="row mt-3">
