--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -24,11 +24,14 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     </head>
 
-    <body class="">
+    <body class="position-relative">
         {% include 'header.html.twig' %}
 
-        <div class="section full-height">{% block content %}{% endblock %}</div>
-        {% include 'footer.html.twig' %} {% block javascript %}{% endblock %}
+        <div class="section full-height">
+            {% block content %}{% endblock %} {% include 'footer.html.twig' %}
+        </div>
+
+        {% block javascript %}{% endblock %}
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
