qui sommes-nous ajouté au pokedex

--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -19,7 +19,7 @@
                                 <a class="nav-link" href="http://localhost:8000/">Accueil</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link" href="/about">Qui sommes-nous</a>
+                                <a class="nav-link" href="/infos">Qui sommes-nous</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
                                 <a class="nav-link" href="/items">items</a>
