--- a/public/assets/css/infos/about.css
+++ b/public/assets/css/infos/about.css
@@ -6,8 +6,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px; 
+    grid-column-gap: clamp(15px, 2%, 30px);
+    grid-row-gap: 25px; 
 }
 
 .text-align {
@@ -66,5 +66,6 @@
     .grid {
         display: flex;
         flex-direction: column;
+        gap: 10px;
     }
 }
