petites modifs sur le footer

--- a/src/View/Infos/index.html.twig
+++ b/src/View/Infos/index.html.twig
@@ -5,85 +5,86 @@
 {% endblock %}
 
 {% block content %}
+<div class="super-div">
+    <h1 class="space">Qui sommes-nous</h1>
+    <div class="grid">
+        <div class="atext div1">
+            <p class="text-align">Bienvenue chez <strong>Cuir Cuir Moustache</strong>, votre destination en ligne dédiée
+                aux
+                maroquiniers passionnés et professionnels. Fondée par des amoureux du cuir et de l'artisanat, notre
+                entreprise a pour mission de fournir des matériaux de haute qualité, des outils spécialisés et des
+                inspirations créatives à tous ceux qui partagent notre passion pour la maroquinerie. <br> <br>
+                <strong>Notre Histoire</strong><br>
+                <strong>Cuir Cuir Moustache</strong> est née de l'envie de combler un vide sur le marché : offrir une
+                sélection
+                rigoureuse de produits de qualité pour la création d'articles en cuir, tout en soutenant les artisans et
+                les
+                créateurs. Depuis notre lancement, nous avons bâti une communauté dynamique et engagée autour de l'amour
+                du
+                cuir
+                et de l'artisanat.
+            </p>
+        </div>
 
-<h1 class="space">Qui sommes-nous</h1>
-<div class="grid">
-    <div class="atext div1">
-        <p class="text-align">Bienvenue chez <strong>Cuir Cuir Moustache</strong>, votre destination en ligne dédiée
-            aux
-            maroquiniers passionnés et professionnels. Fondée par des amoureux du cuir et de l'artisanat, notre
-            entreprise a pour mission de fournir des matériaux de haute qualité, des outils spécialisés et des
-            inspirations créatives à tous ceux qui partagent notre passion pour la maroquinerie. <br> <br>
-            <strong>Notre Histoire</strong><br>
-            <strong>Cuir Cuir Moustache</strong> est née de l'envie de combler un vide sur le marché : offrir une
-            sélection
-            rigoureuse de produits de qualité pour la création d'articles en cuir, tout en soutenant les artisans et
-            les
-            créateurs. Depuis notre lancement, nous avons bâti une communauté dynamique et engagée autour de l'amour
-            du
-            cuir
-            et de l'artisanat.
-        </p>
+        <div class="div2"></div>
+
+        <div class="atext div4">
+            <p class="text-align"><strong>Notre Engagement</strong><br>
+                Nous croyons fermement en la qualité et en l'authenticité. C'est pourquoi chaque produit que nous
+                proposons
+                est
+                soigneusement sélectionné pour répondre aux normes les plus élevées. Nous collaborons avec des
+                fournisseurs
+                renommés et respectueux de l'environnement, garantissant ainsi que nos cuirs et nos outils sont non
+                seulement
+                excellents, mais aussi durables et éthiques.</p>
+
+            <p class="text-align"><strong>Nos Produits</strong><br>
+                Chez <strong>Cuir Cuir Moustache</strong>, vous trouverez une gamme complète de produits pour réaliser
+                vos
+                projets de maroquinerie :</p>
+            <ul>
+                <li class="text-align"><strong>Cuirs de qualité</strong> : Veaux, vaches, chèvres et autres cuirs
+                    exotiques.
+                </li>
+                <li class="text-align"><strong>Outils professionnels</strong> : Couteaux, aiguilles, matrices, et bien
+                    plus
+                    encore.</li>
+                <li class="text-align"><strong>Accessoires et finitions</strong> : Boucles, fermetures éclair, rivets,
+                    teintures
+                    et cirages.</li>
+                <li class="text-align"><strong>Kits et tutoriels</strong> : Pour débutants et experts souhaitant
+                    explorer de
+                    nouvelles techniques.</li>
+            </ul>
+        </div>
+
+        <div class="div3"></div>
+
+        <div class="atext div5">
+            <p class="text-align"><strong>Notre Équipe</strong><br>
+                Notre équipe est composée de professionnels du cuir et d'artisans expérimentés, prêts à partager leur
+                savoir-faire et à vous accompagner dans vos projets. Nous sommes là pour répondre à vos questions, vous
+                offrir
+                des conseils personnalisés et vous inspirer à chaque étape de votre parcours créatif. <br>
+                <strong>Pourquoi Nous Choisir ?</strong><br>
+                <strong>Qualité et Sélection</strong> : Une gamme de produits triés sur le volet pour garantir le
+                meilleur à
+                nos
+                clients.<br>
+                <strong>Service Client Dédié</strong> : Une équipe passionnée et disponible pour vous aider.<br>
+                <strong>Inspiration et Formation</strong> : Des ressources et des tutoriels pour nourrir votre
+                créativité et
+                perfectionner vos compétences.<br>
+                <strong>Engagement Éthique</strong> : Des pratiques respectueuses de l'environnement et un soutien aux
+                fournisseurs locaux et responsables. <br> <br>
+                Rejoignez la communauté <strong>Cuir Cuir Moustache</strong> et découvrez un univers où la
+                tradition rencontre l'innovation. Ensemble, donnons vie à vos idées et transformons le cuir en œuvres
+                d'art.
+            </p>
+        </div>
+
+        <div class="div6"></div>
     </div>
-
-    <div class="div2"></div>
-
-    <div class="atext div4">
-        <p class="text-align"><strong>Notre Engagement</strong><br>
-            Nous croyons fermement en la qualité et en l'authenticité. C'est pourquoi chaque produit que nous
-            proposons
-            est
-            soigneusement sélectionné pour répondre aux normes les plus élevées. Nous collaborons avec des
-            fournisseurs
-            renommés et respectueux de l'environnement, garantissant ainsi que nos cuirs et nos outils sont non
-            seulement
-            excellents, mais aussi durables et éthiques.</p>
-
-        <p class="text-align"><strong>Nos Produits</strong><br>
-            Chez <strong>Cuir Cuir Moustache</strong>, vous trouverez une gamme complète de produits pour réaliser
-            vos
-            projets de maroquinerie :</p>
-        <ul>
-            <li class="text-align"><strong>Cuirs de qualité</strong> : Veaux, vaches, chèvres et autres cuirs
-                exotiques.
-            </li>
-            <li class="text-align"><strong>Outils professionnels</strong> : Couteaux, aiguilles, matrices, et bien
-                plus
-                encore.</li>
-            <li class="text-align"><strong>Accessoires et finitions</strong> : Boucles, fermetures éclair, rivets,
-                teintures
-                et cirages.</li>
-            <li class="text-align"><strong>Kits et tutoriels</strong> : Pour débutants et experts souhaitant
-                explorer de
-                nouvelles techniques.</li>
-        </ul>
-    </div>
-
-    <div class="div3"></div>
-
-    <div class="atext div5">
-        <p class="text-align"><strong>Notre Équipe</strong><br>
-            Notre équipe est composée de professionnels du cuir et d'artisans expérimentés, prêts à partager leur
-            savoir-faire et à vous accompagner dans vos projets. Nous sommes là pour répondre à vos questions, vous
-            offrir
-            des conseils personnalisés et vous inspirer à chaque étape de votre parcours créatif. <br>
-            <strong>Pourquoi Nous Choisir ?</strong><br>
-            <strong>Qualité et Sélection</strong> : Une gamme de produits triés sur le volet pour garantir le
-            meilleur à
-            nos
-            clients.<br>
-            <strong>Service Client Dédié</strong> : Une équipe passionnée et disponible pour vous aider.<br>
-            <strong>Inspiration et Formation</strong> : Des ressources et des tutoriels pour nourrir votre
-            créativité et
-            perfectionner vos compétences.<br>
-            <strong>Engagement Éthique</strong> : Des pratiques respectueuses de l'environnement et un soutien aux
-            fournisseurs locaux et responsables. <br> <br>
-            Rejoignez la communauté <strong>Cuir Cuir Moustache</strong> et découvrez un univers où la
-            tradition rencontre l'innovation. Ensemble, donnons vie à vos idées et transformons le cuir en œuvres
-            d'art.
-        </p>
-    </div>
-
-    <div class="div6"></div>
 </div>
 {% endblock %}
