--- a/public/assets/css/cart/ordered.css
+++ b/public/assets/css/cart/ordered.css
@@ -2,6 +2,10 @@ h1 {
     text-align: center;
 }
 
+.super-div {
+    min-height: 80vh;
+  }
+
 .display {
     display: flex;
     justify-content: center;
