--- a/public/assets/css/infos/about.css
+++ b/public/assets/css/infos/about.css
@@ -1,3 +1,7 @@
+.super-div {
+    margin-bottom: 10px;
+}
+
 .space {
     margin: 2%;
 }
@@ -7,7 +11,7 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-column-gap: clamp(15px, 2%, 30px);
-    grid-row-gap: 25px; 
+    grid-row-gap: 25px;
 }
 
 .text-align {
