--- a/src/View/Admin/Product/_form.html.twig
+++ b/src/View/Admin/Product/_form.html.twig
@@ -87,7 +87,7 @@
 						</div>
 						<div class="form-group">
 							<label for="description">Description courte:</label>
-							<textarea class="form-control" id="description" name="description" rows="4" placeholder="Description courte">{{item.description}}</textarea>
+							<textarea class="form-control" id="description" name="description" rows="4" placeholder="Description courte" maxlength="79">{{item.description}}</textarea>
 						</div>
 
 						<div class="form-group">
