--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -39,5 +39,6 @@
             crossorigin="anonymous"
         ></script>
         <script src="/assets/js/function.js"></script>
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     </body>
 </html>
