--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -78,7 +78,7 @@
                     <span>{{product.description}}</span>
                 
                 </div>
-                <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>{{product.price}}€</span><span><a href="/product/show?id={{product.id}}"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+                <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>{{product.price|intToCurrency}}</span><span><a href="/product/show?id={{product.id}}"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
             </div>
         
     </div>
@@ -125,9 +125,8 @@
                             </div>
                             <div class="stats mt-2">
                                 <span>{{product.description}}</span>
-                            
                             </div>
-                            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>{{product.price}}€</span><span><a href="/product/show?id={{product.id}}"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
+                            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>{{product.price|intToCurrency}}</span><span><a href="/product/show?id={{product.id}}"><i class="bi bi-cart-plus text-dark"></i></a></span></div>
                         </div>
                     
                 </div>
