modification css de la connexion

--- a/src/View/Auth/edit_account.html.twig
+++ b/src/View/Auth/edit_account.html.twig
@@ -37,7 +37,7 @@
             <label for="phone" class="visually-hidden">Téléphone</label>
             <input type="text" id="phone" name="phone" value="{{ user.phone }}" placeholder="Téléphone" required>
         </div>
-        <button type="submit">Mettre à jour</button>
+        <button type="submit" class="button button-block">Mettre à jour</button>
     </form>
 </div>
 {% endblock %}
