--- a/src/View/layout_admin.html.twig
+++ b/src/View/layout_admin.html.twig
@@ -42,7 +42,7 @@
             </div>
             <div class="app-header-actions">
                 <button class="user-profile">
-                    <span>Bonjour Nom personne connecter</span>
+                    <span>{{ session.user.username }}</span>
                     <span>
                         <img src="/assets/images/logo.png" alt="">
                     </span>
