--- a/src/View/Auth/user_account.html.twig
+++ b/src/View/Auth/user_account.html.twig
@@ -9,12 +9,12 @@
 
 {% block content %}
 <div class="form">
-    <h2>Mon Compte CuirCuirMoustache</h2>
+    <h2 class="text-center">Mon Compte CuirCuirMoustache</h2>
     <p>Nom d'utilisateur : {{ user.username }}</p>
     <p>Email : {{ user.email }}</p>
     <p>Prénom : {{ user.firstname }}</p>
     <p>Nom : {{ user.lastname }}</p>
     <p>Téléphone : {{ user.phone }}</p>
-    <p><a href="/edit_account">Modifier les informations</a></p>
+    <p><a href="/edit_account" class="modify">Modifier les informations</a></p>
 </div>
 {% endblock %}
