--- a/src/View/footer.html.twig
+++ b/src/View/footer.html.twig
@@ -1,48 +1,71 @@
 <footer class="footer">
     <div class="container">
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-start">
             <div class="d-flex flex-column" style="width: 50%">
-                <div class="">
-                    <ul class="list-unstyled d-flex flex-row flex-wrap">
+                <div class="mb-3">
+                    <ul class="list-unstyled">
                         <li class="nav-item p-2">
-                            <a class="nav-link" href="/about">Qui sommes-nous</a>
+                            <a class="nav-link" href="/about"
+                                >Qui sommes-nous</a
+                            >
                         </li>
                         <li class="nav-item p-2">
-                            <a class="nav-link" href="/legal">Mentions Légales</a>
+                            <a class="nav-link" href="/legal"
+                                >Mentions Légales</a
+                            >
                         </li>
                         <li class="nav-item p-2">
-                            <a class="nav-link" href="/privacy">Politique de confidentialité</a>
+                            <a class="nav-link" href="/privacy"
+                                >Politique de confidentialité</a
+                            >
                         </li>
-
+                    </ul>
                 </div>
-                <div class="">
-                    <ul class="list-unstyled d-flex flex-row flex-wrap justify-content-center">
+                <div class="social-icons">
+                    <ul
+                        class="list-unstyled d-flex flex-row flex-wrap justify-content-center"
+                    >
                         <li class="nav-item p-2">
-                            <a href="https://facebook.com" class="text-white me-3" target="_blank">
+                            <a
+                                href="https://facebook.com"
+                                class="text-white me-3"
+                                target="_blank"
+                            >
                                 <i class="bi bi-facebook"></i>
                             </a>
                         </li>
                         <li class="nav-item p-2">
-                            <a href="https://twitter.com" class="text-white me-3" target="_blank">
+                            <a
+                                href="https://twitter.com"
+                                class="text-white me-3"
+                                target="_blank"
+                            >
                                 <i class="bi bi-twitter"></i>
                             </a>
                         </li>
                         <li class="nav-item p-2">
-                            <a href="https://instagram.com" class="text-white" target="_blank">
+                            <a
+                                href="https://instagram.com"
+                                class="text-white"
+                                target="_blank"
+                            >
                                 <i class="bi bi-instagram"></i>
+                            </a>
                         </li>
                     </ul>
-                    </a>
                 </div>
-
             </div>
-
-            <div class="" style="width: 50%">
+            <div style="width: 50%">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.6330533719783!2d3.0197751761546416!3d50.63393317413631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d55c63d0d77d%3A0x6986c08acba25607!2sWild%20Code%20School%20-%20Formation%20d%C3%A9veloppeur%20web%2C%20data%20analyst%2C%20informatique%2C%20web%20design!5e0!3m2!1sfr!2sca!4v1722484485404!5m2!1sfr!2sca"
-                    width="100%" height="300" style="border: 0" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                    width="100%"
+                    height="300"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
             </div>
         </div>
+    </div>
 </footer>
