politique de confidentialité

--- a/src/View/footer.html.twig
+++ b/src/View/footer.html.twig
@@ -1,85 +1,48 @@
 <footer class="footer">
     <div class="container">
-        <div class="row">
-            <div class="col-md-4 d-flex align-items-center">
-                <img
-                    src="/assets/images/logo.png"
-                    alt="Logo"
-                    class="footer-logo"
-                />
-            </div>
+        <div class="d-flex align-items-center">
+            <div class="d-flex flex-column" style="width: 50%">
+                <div class="">
+                    <ul class="list-unstyled d-flex flex-row flex-wrap">
+                        <li class="nav-item p-2">
+                            <a class="nav-link" href="/about">Qui sommes-nous</a>
+                        </li>
+                        <li class="nav-item p-2">
+                            <a class="nav-link" href="/legal">Mentions Légales</a>
+                        </li>
+                        <li class="nav-item p-2">
+                            <a class="nav-link" href="/privacy-policy">Politique de confidentialité</a>
+                        </li>
 
-            <div class="col-md-4">
-                <div class="row">
-                    <div class="col-6 text-center">
-                        <ul class="list-unstyled">
-                            <li><a href="/" class="text-white">Home</a></li>
-                            <li>
-                                <a href="/about" class="text-white">Items</a>
-                            </li>
-                            <li>
-                                <a href="/items" class="text-white"
-                                    >Qui sommes-nous</a
-                                >
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-6 text-center">
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="/cart" class="text-white">Panier</a>
-                            </li>
-                            <li>
-                                <a href="/login" class="text-white">Login</a>
-                            </li>
-                            <li>
-                                <a href="/logout" class="text-white"
-                                    >Se Déconnecter</a
-                                >
-                            </li>
-                        </ul>
-                    </div>
                 </div>
+                <div class="">
+                    <ul class="list-unstyled d-flex flex-row flex-wrap justify-content-center">
+                        <li class="nav-item p-2">
+                            <a href="https://facebook.com" class="text-white me-3" target="_blank">
+                                <i class="bi bi-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item p-2">
+                            <a href="https://twitter.com" class="text-white me-3" target="_blank">
+                                <i class="bi bi-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item p-2">
+                            <a href="https://instagram.com" class="text-white" target="_blank">
+                                <i class="bi bi-instagram"></i>
+                        </li>
+                    </ul>
+                    </a>
+                </div>
+
             </div>
 
-            <div class="col-md-4">
+            <div class="" style="width: 50%">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.6330533719783!2d3.0197751761546416!3d50.63393317413631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d55c63d0d77d%3A0x6986c08acba25607!2sWild%20Code%20School%20-%20Formation%20d%C3%A9veloppeur%20web%2C%20data%20analyst%2C%20informatique%2C%20web%20design!5e0!3m2!1sfr!2sca!4v1722484485404!5m2!1sfr!2sca"
-                    width="100%"
-                    height="300"
-                    style="border: 0"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                >
+                    width="100%" height="300" style="border: 0" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
         </div>
-
-        <div class="row mt-3">
-            <div class="col text-center">
-                <a
-                    href="https://facebook.com"
-                    class="text-white me-3"
-                    target="_blank"
-                >
-                    <i class="bi bi-facebook"></i>
-                </a>
-                <a
-                    href="https://twitter.com"
-                    class="text-white me-3"
-                    target="_blank"
-                >
-                    <i class="bi bi-twitter"></i>
-                </a>
-                <a
-                    href="https://instagram.com"
-                    class="text-white"
-                    target="_blank"
-                >
-                    <i class="bi bi-instagram"></i>
-                </a>
-            </div>
-        </div>
-    </div>
 </footer>
