--- a/public/assets/css/cart/cart.css
+++ b/public/assets/css/cart/cart.css
@@ -2,6 +2,11 @@ h1 {
     text-align: center;
 }
 
+.super-div {
+  margin-bottom: 20px;
+  min-height: 70vh;
+}
+
 .display-title {
   display: flex;
   justify-content: center;
@@ -109,6 +114,7 @@ li {
     padding: 20px;
     gap: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 5px;
   }
   
   .card:last-child {
